# cobo-cli

./: .arcconfig  .bandit_baseline.json  .bandit_scan.cfg  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  tox.ini
cobo_cli/: cli.py
cobo_cli/commands/: __init__.py  app.py  auth.py  config.py  delete.py  doc.py  env.py  get.py  graphql.py  keys.py  login.py  logout.py  logs.py  open.py  post.py  put.py  skill.py  webhook.py
cobo_cli/commands/tests/: test_logout.py
cobo_cli/commands/tests/testenv/: clean  run_unittest.sh
cobo_cli/data/: auth_methods.py  context.py  manifest.py
cobo_cli/managers/: __init__.py  config_manager.py  keys_manager.py  org_token_manager.py  user_token_manager.py
cobo_cli/managers/tests/: test_keys_manager.py
cobo_cli/tests/: conftest.py  test_apps_commands.py  test_config_commands.py  test_integration.py  test_keys_commands.py  test_login_commands.py  test_utils.py
cobo_cli/tests/integration/: test_cli_integration.py
cobo_cli/utils/: api.py  common.py  portal_client.py  ws.py
cobo_cli/utils/tests/: test_signer.py
skills/cobo-payment/: SKILL.md
skills/cobo-payment/assets/templates/: go.md  java.md  python.md  ts-node.md
skills/cobo-payment/references/: api-quickref.md  concepts.md  errors.md  recipes.md  sdk-patterns.md
skills/cobo-waas/: SKILL.md
skills/cobo-waas/assets/templates/: go.md  java.md  python.md  ts-node.md
skills/cobo-waas/references/: api-quickref.md  auth.md  cli.md  concepts.md  diagnostics.md  errors.md  flows.md  graphql.md  onboarding.md  recipes.md  sdk-patterns.md  security.md  troubleshooting.md
tests/testenv/: README.md  settings.py  tox_ut.ini  unittest_settings.py
