[tool.poetry]
name = "cobo-cli"
version = "0.0.2"
description = "Cobo Command-line Tool"
authors = ["Cobo <support@cobo.com>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "cobo_cli" }]

[tool.poetry.dependencies]
python = "^3.9"
gitpython = "3.1.43"
pynacl = "1.5.0"
click = ">=8.1,<8.2"
dataclasses-json = "0.6.7"
python-dotenv = ">=1.0.1,<1.1"
pyyaml = "6.0.1"
requests = "2.32.3"
setuptools = "68.0.0"
websocket-client = "1.8.0"
pydantic = ">=2.0.0,<3.0.0"
pydantic-settings = ">=2.0.0,<3.0.0"
tomli = ">=2.0.0,<3.0.0"
tomli-w = ">=1.0.0,<2.0.0"

[tool.poetry.group.dev.dependencies]
bandit = "1.6.2"
black = "24.3.0"
flake8 = "3.8.3"
isort = "5.1.4"
ossaudit = "0.5.0"
pre-commit = "2.19.0"
pysocks = "1.7.1"
pytest-cov = "5.0.0"
pytest-mock = "3.6.1"
pytest = "7.0.1"
tox = "3.14.0"

[tool.poetry.scripts]
cobo = "cobo_cli.cli:cli"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
