[tool.poetry]
name = "cobo-cli"
version = "0.1.9"
description = "Cobo Command-line Tool"
authors = ["Cobo <support@cobo.com>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "cobo_cli" }]
include = [
    { path = "skills", format = ["sdist", "wheel"] }
]

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
gitpython = "==3.1.50"
pynacl = "==1.6.2"
click = "==8.1.7"
dataclasses-json = "==0.6.7"
python-dotenv = "==1.2.2"
pyyaml = "==6.0.2"
requests = "==2.33.1"
urllib3 = "==2.7.0"
websocket-client = "==1.8.0"
pydantic = "==2.9.2"
pydantic-settings = "==2.6.1"
tomli = "==2.1.0"
tomli-w = "==1.1.0"
email-validator = "==2.2.0"


[tool.poetry.group.dev.dependencies]
bandit = "==1.7.10"
black = "==26.3.1"
flake8 = "==3.9.2"
isort = "==5.13.2"
ossaudit = "==0.5.0"
pre-commit = "==4.0.1"
coverage = "==7.6.4"
pysocks = "==1.7.1"
pytest-cov = "==6.0.0"
pytest-mock = "==3.14.0"
pytest = "==9.0.3"
tox = "==4.23.2"


[tool.poetry.scripts]
cobo = "cobo_cli.cli:cli"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"